--- a/config/scaffolding/DadademoProject.yml
+++ b/config/scaffolding/DadademoProject.yml
@@ -7,3 +7,12 @@ packages:
   gitUrl: https://github.com/thesse1/DadademoProject
   gitUsername: thesse1
   gitBranch: main
+services:
+- serviceName: project.dadademo.integrations:helloworld
+  packages:
+  - name: DadademoProject
+    version: "1.0"
+- serviceName: pub.flow:debugLog
+  packages:
+  - name: WmPublic
+    version: 11.0.0.0.1020
